dist/pfwiki/Deployment.pfwiki.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/managed-by: generators
    app.kubernetes.io/name: pfwiki
  name: pfwiki
  namespace: pfwiki
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: pfwiki-pfwiki-deployment-c86ec103
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pfwiki
        cdk8s.io/metadata.addr: pfwiki-pfwiki-deployment-c86ec103
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: TZ
              value: America/Chicago
            - name: APP_URL
              value: https://pfwiki.cmdcentral.xyz
            - name: DB_HOST
              value: db
            - name: DB_PORT
              value: "3306"
            - name: DB_USER
              value: root
            - name: DB_PASS
              valueFrom:
                secretKeyRef:
                  key: MARIADB_ROOT_PASSWORD
                  name: db-creds
            - name: DB_DATABASE
              value: bookstack
          image: lscr.io/linuxserver/bookstack:latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: ""
              port: 80
              scheme: HTTP
          name: pfwiki
          ports:
            - containerPort: 80
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: ""
              port: 80
              scheme: HTTP
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 150m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          volumeMounts:
            - mountPath: /config
              name: pvc-data
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: pvc-data
          persistentVolumeClaim:
            claimName: data
            readOnly: false
