dist/pfwiki/Ingress.pfwiki.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: pfwiki
  namespace: pfwiki
spec:
  rules:
    - host: pfwiki.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: pfwiki
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: pathfinder.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: pfwiki
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - pfwiki.cmdcentral.xyz
        - pathfinder.cmdcentral.xyz
      secretName: pfwiki-tls
